k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pipeline-demo
  name: pipeline-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pipeline-demo
  template:
    metadata:
      labels:
        app: pipeline-demo
    spec:
      containers:
        - image: "image-registry.openshift-image-registry.svc:5000/michel-zandbak/pipeline-demo:latest"
          imagePullPolicy: Always
          name: pipeline-demo
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 256Mi
            requests:
              memory: 100Mi
