k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: pipeline-demo
  name: pipeline-demo
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: pipeline-demo
    weight: 100
